--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -86,8 +86,10 @@
         {% endif %}
         {%- if author_is_self -%}
           <em>
+          <strong>
             {{- author.first }}
             {{ author_last_html -}}
+          </strong>
           </em>
         {%- else -%}
           {%- if coauthor_url -%}
@@ -234,7 +236,7 @@
         <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
       {% endif %}
       {% if entry.code %}
-        <i class="fa-solid fa-square-code"></i> <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
+       <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
       {% endif %}
       {% if entry.poster %}
         {% if entry.poster contains '://' %}
